bin_PROGRAMS = satss

satss_SOURCES = Alg.h BasicHeap.h BE.h BigNum_fake.h BigNum.h BoxedVec.h Clause.h ClauseList.h ClauseManager.h CPT.h Debug.h Double.h DRC.h Function.h GM.h Graph.h GrayCode.h HashFunction.h Heap.h IJGP_Sampler.h IJGPSamplingHelper.h JG.h JT.h LightweightTypes.h LogFunction.h Map.h Maximums.h myRandom.h ORStore.h Queue.h Random.h RB_IJGP_Sampler.h SampleSearch.h SATInstance.h SAT_Parser.h SATSolver.h SF.h Solver.h SolverTypes.h Sort.h Util.h Variable.h VariableList.h VariableSet.h Vec.h ORStore.cpp randgen.cpp Random.cpp SATInstance.cpp SATPreprocessor.cpp SATSolver.cpp Clause.cpp ClauseList.cpp Debug.cpp DRC.cpp Function.cpp GM.cpp Graph.cpp GrayCode.cpp JG.cpp Variable.cpp JGLS.cpp JGSS.cpp JGHSS.cpp HashFunction.cpp LogFunction.cpp JGLSS.cpp BE.cpp MAIN_SATSS.cpp IJGPSamplingHelper.cpp SF.cpp SampleSearch.cpp Solver.C JT.cpp  myRandom.cpp

LIBS = /usr/lib/libz.a /usr/lib/libgmp.a /usr/lib/libgmpxx.a

